reformat product bundle list code

--- a/custom/plugins/ProductBundle/src/Resources/app/administration/src/module/product-bundle/page/product-bundle-list/product-bundle-list.html.twig
+++ b/custom/plugins/ProductBundle/src/Resources/app/administration/src/module/product-bundle/page/product-bundle-list/product-bundle-list.html.twig
@@ -6,7 +6,7 @@
             key="product_bundle"
             initial-search-type="product_bundle"
             :initial-search="term"
-            @search="onSearch"
+            @search="searchProductBundles"
         />
     </template>
 
@@ -54,7 +54,7 @@
             >
                 <template #actions>
                     <sw-button
-                        @click="onCreate"
+                        @click="createNewBundle"
                         variant="primary"
                     >
                         {{ $tc('sw-product-bundle.list.textCreateProductBundle') }}
